[metadata]
name = cp-math-utils
version = 0.1.0
author = Kadiri Mohan Kumar
author_email = kadirimohankumar1709@gmail.com
description = Math and Competitive Programming utilities for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mohankumarkadiri/math_lib
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6